sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:3: error: not found: value GetNombreValeurs
  var n: Int=GetNombreValeurs()-2
             ^