sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var n: Int=GetNombreValeurs()-2
  for (i<- 0 to n){
    if (plusPetitQue(i+1,i)){
      echange(i,i+1)}}
  for (i<- 0 to n){
    var f: Int=n-i
    if (!plusPetitQue(i+1,i)){
      echange(i,i+1)
    }
  }
  
  
}